# omnirec-scale

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.infra.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  dev-log-2026-07-15.md  dev-log-2026-07-16.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
kubernetes/: deployment.yaml  hpa.yaml
kubernetes/helm/: Chart.yaml  values.yaml
kubernetes/helm/templates/: deploy.yaml
load-testing/: locustfile.py
monitoring/: grafana-dashboard.json  grafana-dashboards.yml  prometheus.yml
omnirec/: __init__.py  benchmark.py  cli.py  config.py  engine.py  errors.py  evaluation.py  linalg.py  logging_setup.py  models.py
omnirec/data/: __init__.py  mockdata.py
omnirec/feature_store/: __init__.py  store.py
omnirec/indexing/: __init__.py  ann.py
omnirec/multimodal/: __init__.py  fusion.py  image.py  text.py
omnirec/pipeline/: __init__.py  streaming.py
omnirec/ranking/: __init__.py  dcn.py  features.py
omnirec/retrieval/: __init__.py  two_tower.py
omnirec/serving/: __init__.py  api.py  cache.py  funnel.py
scripts/: generate_mock_catalog.py
tests/: test_api_cli.py  test_core.py  test_engine.py  test_index.py  test_models.py
